# bag-of-holding

./: Cargo.toml
migrations/: 20240519054525_create_subscriptions_table.up.sql
scripts/: init_db.sh
src/: main.rs  startup.rs
src/routes/: health_check.rs  subscriber.rs
tests/: health_check.rs
